--- a/src/html/carousel.html
+++ b/src/html/carousel.html
@@ -1,48 +1,26 @@
-<div class="carousel" data-current-slide="0" id="mainCarousel">
-    <div class="row carousel-slide">
-        <div class="col-es-12">
-            <ul class="carousel-list">
-                {% set arr = [
-                    {
-                        src: '1'
-                    },
-                    {
-                        src: '2'
-                    },
-                    {
-                        src: '3'
-                    },
-                    {
-                        src: '4'
-                    },
-                    {
-                        src: '5'
-                    }
-                ] %}
-                {% for item in arr %}
-                <li>
-                    <img src="#" data-img="{{item.src}}.jpg" alt="banner" class="img-responsive">
-                </li>
-                {% endfor %}
-            </ul>
-        </div>
+{% set arr = ['1', '2', '3', '4', '5'] %}
+
+<div class="carousel" data-current-slide="0" data-style="slide" data-autoplay="true">
+    <ul class="carousel__list">
+        {% for item in arr %}
+        <li class="carousel__item">
+            <a href="javascript:void(0);">
+                <img src="./assets/img/banner/desktop/{{item}}.jpg" alt="banner">
+            </a>
+        </li>
+        {% endfor %}
+    </ul>
+    <div class="navigation-change button-wrapper row center">
+        <button type="button" class="button button--big" data-id="previous" aria-label="previous">
+            <svg class="icon icon--extra-big">
+                <use xlink:href="./assets/img/icon.svg#previous"></use>
+            </svg>
+        </button>
+        <button type="button" class="button button--big" data-id="next" aria-label="next">
+            <svg class="icon icon--extra-big rotate-180">
+                <use xlink:href="./assets/img/icon.svg#previous"></use>
+            </svg>
+        </button>
     </div>
-    <div class="menu-horizontal carousel-disabled">
-        <ul class="navigation-arrow">
-            <li>
-                <button type="button" class="bt bt-big" data-id="navLeft" aria-label="anterior">
-                    <span class="fa fa-angle-left fa-4x" aria-hidden="true"></span>
-                </button>
-            </li>
-            <li>
-                <button type="button" class="bt bt-big" data-id="navRight" aria-label="próxima">
-                    <span class="fa fa-angle-right fa-4x" aria-hidden="true"></span>
-                </button>
-            </li>
-        </ul>
-    </div>
-    <div class="menu-horizontal text-center carousel-controller-over">
-        <ul class="carousel-controller carousel-controller-white">
-        </ul>
-    </div>
+    <div class="carousel__controller carousel__controller--over button-wrapper row center"></div>
 </div>
