--- a/src/html/index.html
+++ b/src/html/index.html
@@ -63,13 +63,13 @@
             {% include "carousel.html" %}
         </section>
         <section class="grid__content">
-            <div class="about">
+            <div class="about" id="home">
                 {% include "about.html" %}
             </div>
-            <div class="service">
+            <div class="service" id="service">
                 {% include "service.html" %}
             </div>
-            <div class="contact">
+            <div class="contact" id="contact">
                 {% include "contact.html" %}
             </div>
         </section>
