--- a/src/html/menu.html
+++ b/src/html/menu.html
@@ -4,7 +4,7 @@
         text: 'Início'
     },
     {
-        href: 'product',
+        href: 'service',
         text: 'Produtos e Serviços'
     },
     {
