--- a/src/html/menu.html
+++ b/src/html/menu.html
@@ -18,13 +18,13 @@
         <img src="./assets/img/logo/logo.png" alt="coelho assessoria">
     </a>
     <div class="button-wrapper">
-        <button type="button" class="button button--big button--regular--proportional toggle-menu"
+        <button type="button" class="button button--regular button--regular--proportional button--grey toggle-menu"
             aria-label="Menu">
             <svg class="icon icon--regular">
                 <use xlink:href="./assets/img/icon.svg#menu"></use>
             </svg>
         </button>
-        <nav class="row toggle-menu__content">
+        <nav class="toggle-menu__content">
             {% for item in arr %}
             <a href="#{{item.href}}" class="button button--regular button--white">
                 {{item.text}}
