--- a/src/html/about.html
+++ b/src/html/about.html
@@ -1,7 +1,8 @@
  <article class="container">
      <h1 class="title">Sobre nós</h1>
-     <p>A <strong>Coelho Assessoria Empresarial</strong> é uma empresa de consultoria em calçados que já atua no
-         mercado há 25 anos, sempre buscando a excelência dos serviços e a satisfação de seus clientes.
+     <p>
+        {{arrDefault.description}}
+
          Desenvolvendo um trabalho sério e consistente, colocamos todo o nosso conhecimento e experiência na
          busca de soluções inovadoras e sustentáveis que tragam mais rentabilidade, competitividade e melhor
          produtividade.
