--- a/src/html/nunjucks.html
+++ b/src/html/nunjucks.html
@@ -1,6 +1,9 @@
 {% set arrDefault =
     {
-        description: 'Graduado em Comunicação Social, habilitação em Publicidade e Propaganda. Mais de 15 anos de experiência no ramo, atuo como designer e desenvolvedor web, focado em front end.',
-        title: 'Jeferson Winter'
+        description: 'A Coelho Assessoria Empresarial é uma empresa de consultoria em calçados que já atua no mercado há 25 anos, sempre buscando a excelência dos serviços e a satisfação de seus clientes.',
+        title: 'Coelho Assessoria Empresarial',
+        keywords: 'coelho, assessoria, empresarial, calçados',
+        theme: '#36434b',
+        author: 'Jeferson Winter'
     }
 %}
