--- a/src/html/index.html
+++ b/src/html/index.html
@@ -7,15 +7,16 @@
     <meta name="format-detection" content="telephone=yes" />
     <meta name="viewport" content="initial-scale=1,maximum-scale=5,user-scalable=yes,width=device-width">
     <meta name="description" content="{{arrDefault.description}}" />
-    <meta name="author" content="{{arrDefault.title}}" />
-    <meta name="keywords" content="{{arrDefault.title}}, framework, frontend, html, css, javascript" />
+    <meta name="author" content="{{arrDefault.author}}" />
+    <meta name="keywords" content="{{arrDefault.keywords}}" />
     <title>{{arrDefault.title}}</title>
 
     <meta name="msapplication-tap-highlight" content="no" />
-    <meta name="theme-color" content="#000000" />
-    <meta name="msapplication-TileColor" content="#000000" />
+    <meta name="theme-color" content="{{arrDefault.theme}}" />
+    <meta name="msapplication-TileColor" content="{{arrDefault.theme}}" />
     <meta name="msapplication-TileImage" content="./assets/img/logo/144-144.png" />
     <meta name="application-name" content="{{arrDefault.title}}" />
+
     <link rel="shortcut icon" href="./assets/img/logo/16-16.png" />
     <link rel="apple-touch-icon" href="./assets/img/logo/57-57.png" />
     <link rel="apple-touch-icon" sizes="72x72" href="./assets/img/logo/72-72.png" />
@@ -39,7 +40,7 @@
         const globalLanguage = "pt";
     </script>
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-38232368-1"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-G6HY1RMZM6"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
 
@@ -47,7 +48,7 @@
             dataLayer.push(arguments);
         }
         gtag('js', new Date());
-        gtag('config', 'UA-38232368-1');
+        gtag('config', 'G-G6HY1RMZM6');
     </script>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;900&display=swap" rel="stylesheet">
