change menu name

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -64,7 +64,7 @@
             {% include "carousel.html" %}
         </section>
         <section class="grid__content">
-            <div class="about" id="home">
+            <div class="about" id="about">
                 {% include "about.html" %}
             </div>
             <div class="service" id="service">
