--- a/src/html/menu.html
+++ b/src/html/menu.html
@@ -1,7 +1,7 @@
 {% set arr = [
     {
-        href: 'home',
-        text: 'Início'
+        href: 'about',
+        text: 'Sobre nós'
     },
     {
         href: 'service',
