modify images format

--- a/src/html/about.html
+++ b/src/html/about.html
@@ -94,7 +94,7 @@
                     }
                 ] %}
          {% for item in arr %}
-         <img src="#" data-src="./assets/img/flag/{{item.src}}.jpg" alt="{{item.src}}" data-lazy-load="true">
+         <img src="#" data-src="./assets/img/flag/{{item.src}}.webp" alt="{{item.src}}" data-lazy-load="true">
          {% endfor %}
      </span>
  </article>
