--- a/src/html/index.html
+++ b/src/html/index.html
@@ -51,13 +51,13 @@
         gtag('config', 'G-G6HY1RMZM6');
     </script>
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;900&display=swap" rel="stylesheet">
+    <link rel="preload" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;900&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
 </head>
 
 <body>
     {% include "loading-main.html" %}
     <main class="grid">
-        <section class="grid__header">
+        <section class="grid__header" id="header">
             {% include "menu.html" %}
         </section>
         <section class="grid__carousel">
