--- a/src/html/menu.html
+++ b/src/html/menu.html
@@ -14,7 +14,7 @@
 ] %}
 
 <div class="row header">
-    <a href="index.html" class="logo button button--regular button--white" aria-label="home">
+    <a href="#header" class="logo button button--regular button--white" aria-label="home">
         <img src="./assets/img/logo/logo.png" alt="coelho assessoria">
     </a>
     <div class="button-wrapper">
