--- a/src/html/carousel.html
+++ b/src/html/carousel.html
@@ -5,9 +5,9 @@
         {% for item in arr %}
         <li class="carousel__item">
             <picture>
-                <source media="(max-width:500px)" srcset="./assets/img/banner/mobile/{{item}}.jpg">
-                <source media="(min-width:501px)" srcset="./assets/img/banner/desktop/{{item}}.jpg">
-                <img src="./assets/img/banner/desktop/{{item}}.jpg" alt="banner">
+                <source media="(max-width:500px)" srcset="./assets/img/banner/mobile/{{item}}.webp">
+                <source media="(min-width:501px)" srcset="./assets/img/banner/desktop/{{item}}.webp">
+                <img src="./assets/img/banner/desktop/{{item}}.webp" alt="banner">
             </picture>
         </li>
         {% endfor %}
