--- a/src/html/contact.html
+++ b/src/html/contact.html
@@ -8,7 +8,7 @@
         <h2 class="page__sub-title">{{color}}</h2>
         <div class="row">
             <div class="column form__field">
-                <label class="form__label" for="contactName" name="name" aria-label="name">Nome:</label>
+                <label class="form__label" for="contactName" aria-label="name">Nome:</label>
                 <input class="form__fill" type="text" id="contactName">
             </div>
             <div class="column form__field">
